[package]
name = "jackie"
version = "0.1.0"
authors = ["Patrick Menlove <patmenlove@gmail.com>"]

[dependencies]
clap = "2.27.1"
colored = "1.6.0"
chrono = "0.4.0"
fern = "0.4.3"
log = "0.3.8"

[dependencies.nickel]
git = "https://github.com/nickel-org/nickel.rs.git"

[dependencies.couchbase]
git = "https://github.com/couchbaselabs/couchbase-rs.git"
branch = "master"

[dependencies.couchbase-sys]
git = "https://github.com/couchbaselabs/couchbase-rs.git"
branch = "master"
